--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,16 @@
 
   "manifest_version": 2,
   "name": "HTMW Ad Remover",
-  "version": "1.1",
+  "version": "1.2",
 
   "description": "Removes ads on HowTheMarketWorks.com",
 
   "icons": {
     "48": "icons/cancel.png"
   },
+  "permissions": [
+    "*://*.howthemarketworks.com/*"
+  ],
 
   "content_scripts": [
     {
