--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "manifest_version": 2,
   "name": "HTMW Ad Remover",
-  "version": "1.2",
+  "version": "1.3",
 
   "description": "Removes ads on HowTheMarketWorks.com",
 
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.howthemarketworks.com/*"],
-      "js": ["removeads.js"]
+      "css": ["removeads.css"]
     }
   ]
 
